@@ -1,5 +1,6 @@
 March 2021 7.5
   - PHP 7.2 required
+  - Support copying LDAP entries from account list
   - LAM Pro:
    -> Self registration: support binary attributes (e.g. for jpegPhoto)
    -> Self registration: support custom mail attributes and from constant value (149)
